--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/microwavekonijn/ps2census-nestjs#readme",
   "devDependencies": {
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
@@ -30,12 +32,10 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.0",
     "prettier": "^2.1.2",
+    "ps2census": "^0.5.7",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/core": "^7.4.4",
-    "ps2census": "^0.5.6",
-    "reflect-metadata": "^0.1.13"
+    "typescript": "^4.0.3"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.4.4",
